# xapi-cpp

./: .gitignore  CMakeHelpers.cmake  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug-report.yml  new-feature.yml
.github/workflows/: cmakeLinux.yml  test-xapi-cpp.yml
examples/: CMakeLists.txt  GetAllSymbols.cpp  GetBalance.cpp  GetCandles.cpp  README.md  RetrieveStreamSessionId.cpp  TradeTransaction.cpp  main.cpp
test/: CMakeLists.txt  TestConnection.cpp  TestSocket.cpp  TestStream.cpp  TestXStationClient.cpp  TestXStationClientStream.cpp  serv.py
test/mocks/: CMakeLists.txt  MockConnection.hpp
xapi/: CMakeLists.txt  Config.cmake.in  Connection.cpp  Connection.hpp  Enums.hpp  Exceptions.hpp  IConnection.hpp  Socket.cpp  Socket.hpp  Stream.cpp  Stream.hpp  XClientStream.cpp  XClientStream.hpp  XStationClient.cpp  XStationClient.hpp  XStationClientStream.cpp  XStationClientStream.hpp  Xapi.cpp  Xapi.hpp
